# recomendador-peliculas

./: Practica_M5.html  Practica_M5.ipynb  README.md  pyproject.toml  recomendador-peliculas.html  recomendador-peliculas.ipynb  requirements.txt
models/: factorization_matrix.keras  mapeos.pkl
utils/: model_functions.py
