[project]
name = "recomendador-peliculas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.21",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "sentence-transformers>=5.0.0",
    "skrub>=0.5.4",
    "tensorflow-cpu>=2.18.0",
]
